--- a/web/src/Sidebar.css
+++ b/web/src/Sidebar.css
@@ -4,6 +4,7 @@ aside {
   box-shadow: 0 0 14px 0 rgba(0, 0, 0, 0.02);
   border-radius: 2px;
   padding: 30px 20px;
+  box-sizing: border-box;
 }
 
 aside strong {
